# gpt-go

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  ISSUES.md  LICENSE  LICENSE-docs  README.md  SCRATCH.md  game-init.txt  game.txt  go_ref.py  models.py  new-game.md  package-lock.json  package.json  prompt.md  pyproject.toml  pyrightconfig.json  referee.py  render.py  state.json
docs/agents/: README.md
docs/agents/coder/: README.md  project-guidance.md  session-prompt.md
docs/agents/player/: README.md  evaluation-rubric.md  gameplay-governance.md  review-prompt.md  session-prompt.md
docs/legacy-ascii/: game-example-manual-v1.txt  game-init-manual-v1.txt  prompt-manual-v1.md
docs/reference/: cli.md
tests/: test_go_ref.py
tests/fixtures/renderer/: a5_last_move.txt  a7_last_move.txt  e5_last_move.txt  j5_last_move.txt
